fix highlight box text overflow bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,12 @@
 		line-height: 1;
 	}
 
+	pre {
+		word-wrap: break-word;
+		overflow-wrap: break-word;
+		white-space: pre-wrap;
+	}
+
 	.highlighter-rouge {
                 line-height: 1.1em;
                 padding: 1em;
